# glut_acm_practice

./: 8queen.cpp  CMakeLists.txt  LICENSE  Makefile  README.md  autogen.py  autogen.xml  build.py  detector.cpp  fmap.json  poj3299_WA.cpp  solution1.cpp  solution5.cpp  solution6.cpp  ~$理工大学ACM程序设计实习报告.docx  桂林理工大学ACM程序设计实习报告.docx
docs/: 算法设计与分析_第六堂课_分支限界法.pptx
public/: 2017年《ACM实习》安排（邓昀）.doc  lab1.docx  lab1.md  lab10.docx  lab10.md  lab11.docx  lab11.md  lab12.docx  lab12.md  lab13.docx  lab13.md  lab14.docx  lab14.md  lab15.docx  lab15.md  lab2.docx  lab2.md  lab3.docx  lab3.md  lab4.docx  lab4.md  lab5.docx  lab5.md  lab6.docx  lab6.md  lab7.docx  lab7.md  lab8.docx  lab8.md  lab9.docx  lab9.md  《ACM程序设计实践》实习指导书陈文鹏.doc  算法设计与分析_第三堂课_动态规划.pptx  算法设计与分析_第二堂课_分治法.pptx  算法设计与分析_第五堂课_回溯法.pptx  算法设计与分析_第四堂课_贪心算法.pptx  算法设计与分析第一次课.pptx
src/: 01pack_v1.0.cpp  8queen.cpp  poj_1003_48percentAC.cpp  poj_1007_40percentAC.cpp  poj_2386_49percentAC.cpp  poj_2538_47percentAC.cpp  poj_3278_31percentAC.cpp  poj_3979_30percentAC.cpp  solution1.cpp  solution2.cpp  solution3.cpp  solution4.cpp  solution8.cpp
src/VISUAL_SEARCH/: VISUAL_SEARCH.APS  VISUAL_SEARCH.cpp  VISUAL_SEARCH.h  VISUAL_SEARCH.rc  VISUAL_SEARCH.vcxproj  resource.h
test/: 01pack_v1.0.data  poj_1590_33percentAC.data  poj_2386_49percentAC.data  poj_3979_30percentAC.data  solution1.data  solution4.data
